# we-plus-hackathon

./: .env.example  .gitignore  BRIEF.md  CREWS.md  DATA.md  README.md  context.txt  dashboard.html  package-lock.json  package.json  run.py  supabase_setup.sql  tsconfig.json
.claude/skills/talentmatch-context/: SKILL.md
data/cvs/: CAND-001.md  CAND-002.md  CAND-003.md  CAND-004.md  CAND-005.md  CAND-006.md  CAND-007.md  CAND-008.md  CAND-009.md  CAND-010.md  CAND-011.md  CAND-012.md  CAND-013.md  CAND-014.md  CAND-015.md  CAND-016.md  CAND-017.md  CAND-018.md  CAND-019.md  CAND-020.md  CAND-021.md  CAND-022.md  CAND-023.md  CAND-024.md  CAND-025.md  CAND-026.md  CAND-027.md  CAND-028.md  CAND-029.md  CAND-030.md  CAND-031.md  CAND-032.md  CAND-033.md  CAND-034.md  CAND-035.md  CAND-036.md  CAND-037.md  CAND-038.md  CAND-039.md  CAND-040.md  (+16 more)
data/vacancies/: VAC-001.md  VAC-002.md  VAC-003.md  VAC-004.md  VAC-005.md  VAC-006.md  VAC-007.md  VAC-008.md  VAC-009.md  VAC-010.md  VAC-011.md  index.json
examples/: LICENSE  PRIVACY.md  expected-output.json  jody-prompt.md  sales-lead-prompt.md
examples/scaffolds/node/: README.md  package.json
examples/scaffolds/python/: match.py
scaffolds/node/: match.ts  tsconfig.json
scaffolds/python/: README.md  ingest.py  match.py  pyproject.toml  sync.py
scratch/: check_schema.py
scripts/: migrateFollowups.mjs  migrateToSupabase.mjs
src/app/: globals.css  layout.tsx  page.module.css  page.tsx
src/app/api/data/: route.ts
src/app/api/followup/: route.ts
src/app/api/ingest/: route.ts
src/app/api/match/: route.ts
